loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:1: error: '(' expected but identifier found.
for compteur<- 1 to 8 {
    ^LoopStairs:7: error: illegal start of simple expression
	}
        ^